[gd_scene load_steps=12 format=3 uid="uid://bst2ojw1f4k44"]

[ext_resource type="Script" uid="uid://ccwv26uiwopyx" path="res://scripts/enemy/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://3ihxewn1hgua" path="res://assets/ui/Rectangle 4.png" id="2_5uy6h"]
[ext_resource type="Texture2D" uid="uid://dc2rxyh3xgf5j" path="res://assets/ui/Rectangle 5.png" id="3_c4w8v"]
[ext_resource type="Texture2D" uid="uid://dm1ccn8g0c1wq" path="res://assets/enemy/enemy_1.png" id="4_c4w8v"]
[ext_resource type="AudioStream" uid="uid://xsmya3uawks" path="res://assets/audio/sounds/hit_sound/hit_2.wav" id="6_xwavj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c4w8v"]
radius = 3.5889068
height = 8.482871

[sub_resource type="SpriteFrames" id="SpriteFrames_xwavj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c4w8v")
}],
"loop": true,
"name": &"defualt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c4w8v")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otmr2"]
size = Vector2(20, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_wtq4b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j0cyh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xwavj"]
radius = 11.0
height = 26.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_md0e3")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -19.0
offset_top = -40.0
offset_right = 18.0
offset_bottom = -36.0
value = 100.0
exp_edit = true
texture_under = ExtResource("2_5uy6h")
texture_progress = ExtResource("3_c4w8v")
texture_progress_offset = Vector2(1.075, 1.02)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.065, 3.065)
shape = SubResource("CapsuleShape2D_c4w8v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xwavj")
animation = &"hurt"
autoplay = "defualt"

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_otmr2")

[node name="enter_area" type="Area2D" parent="Area2D"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/enter_area"]
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_wtq4b")

[node name="exit_area" type="Area2D" parent="Area2D"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/exit_area"]
scale = Vector2(70, 70)
shape = SubResource("CircleShape2D_j0cyh")

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource("CapsuleShape2D_xwavj")

[node name="HitSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xwavj")
volume_db = -21.945

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D/enter_area" to="." method="_on_enter_area_body_entered"]
[connection signal="body_exited" from="Area2D/exit_area" to="." method="_on_exit_area_body_exited"]
